--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "antd": "^5.24.2",
     "axios": "^1.7.9",
     "dayjs": "^1.11.13",
+    "lodash": "^4.17.21",
     "next": "^15.2.4",
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
@@ -29,6 +30,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@types/lodash": "^4.17.16",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
