--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbo",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "lint:fix": "next lint --fix",
+    "lint:cli": "eslint . --ext .js,.jsx,.ts,.tsx --ignore-pattern .eslintignore --report-unused-disable-directives",
     "format": "npx prettier --write .",
     "prepare": "husky"
   },
@@ -18,7 +20,7 @@
     "axios": "^1.7.9",
     "dayjs": "^1.11.13",
     "lodash": "^4.17.21",
-    "next": "^15.2.4",
+    "next": "^15.2.5",
     "next-themes": "^0.4.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
