--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "lint:fix": "next lint --fix",
     "lint:cli": "eslint . --ext .js,.jsx,.ts,.tsx --ignore-pattern .eslintignore --report-unused-disable-directives",
     "format": "npx prettier --write .",
-    "prepare": "sh ./.husky/pre-commit"
+    "pre-commit": "sh ./.husky/pre-commit",
+    "prepare": "husky"
   },
   "dependencies": {
     "@ant-design/icons": "^5.6.1",
